--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,3 +5,6 @@ scrape_configs:
   - job_name: 'local-metrics'
     static_configs:
       - targets: ['host.docker.internal:8080'] # Use 'localhost:8080' if Prometheus and the metrics source are on the same machine without Docker.
+  - job_name: 'node-exporter'
+    static_configs:
+      - targets: ['host.docker.internal:9100']
