--- a/dockerfiles/backend/Dockerfile
+++ b/dockerfiles/backend/Dockerfile
@@ -5,7 +5,13 @@ FROM golang:1.22 as builder
 WORKDIR /app
 
 # Copy everything from the current directory to the PWD(Present Working Directory) inside the container
+
+COPY go.mod go.sum ./
+
 COPY . .
+
+# Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
+RUN go mod download
 
 # Build the Go app
 RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main .
