--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       JWT_EXPIRATION: ${JWT_EXPIRATION}
       BCRYPT_SALT: ${BCRYPT_SALT}
       S3_ID: ${S3_ID}
+      S3_BASE_URL: ${S3_BASE_URL}
       S3_SECRET_KEY: ${S3_SECRET_KEY}
       S3_BUCKET_NAME: ${S3_BUCKET_NAME}
       S3_REGION: ${S3_REGION}
