Update docker-compose.yml with volume mapping for ap-southeast-1-bundle.pem

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   backend:
     build:
@@ -26,6 +26,8 @@ services:
       S3_BUCKET_NAME: ${S3_BUCKET_NAME}
       S3_REGION: ${S3_REGION}
       ENV: ${ENV}
+    volumes:
+      - /home/ubuntu/ap-southeast-1-bundle.pem:/home/ubuntu/ap-southeast-1-bundle.pem
 
   prometheus:
     image: prom/prometheus:latest
@@ -40,11 +42,11 @@ services:
       # •  `/prometheus` refers to where should `volumes.grafana_data` will be placed inside the grafana container
     command:
       # tell the prometheus to use `/etc/prometheus/prometheus.yml`
-      - '--config.file=/etc/prometheus/prometheus.yml'
+      - "--config.file=/etc/prometheus/prometheus.yml"
       # tell the prometheus to use `/prometheus` as the storage path
-      - '--storage.tsdb.path=/prometheus'
+      - "--storage.tsdb.path=/prometheus"
       # tell prometheus to reload if we hit `http://localhost:9090/-/reload` to reload changes in `./prometheus.yml`
-      - '--web.enable-lifecycle'
+      - "--web.enable-lifecycle"
 
   grafana:
     image: grafana/grafana:latest
@@ -68,9 +70,9 @@ services:
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
-    command: 
-      - '--path.procfs=/host/proc' 
-      - '--path.sysfs=/host/sys'
+    command:
+      - "--path.procfs=/host/proc"
+      - "--path.sysfs=/host/sys"
       - --collector.filesystem.ignored-mount-points
       - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
     ports:
@@ -78,4 +80,3 @@ services:
 volumes:
   prometheus_data:
   grafana_data:
-
