--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,7 @@ DB_PORT=5432
 DB_HOST=localhost
 DB_USERNAME=sayu
 DB_PASSWORD=sayuwanttodie
-DB_PARAMS="sslmode=disabled"
-
-PORT=8000
-HOST=0.0.0.0
+DB_PARAMS="sslmode=disable"
 
 PROMETHEUS_ADDRESS=
 
