--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -15,14 +15,14 @@ on:
       - main
 
 env:
-  AWS_REGION: MY_AWS_REGION                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
+  AWS_REGION: ap-southeast-1                   # set this to your preferred AWS region, e.g. us-west-1
+  ECS_CLUSTER: nasgorsifudd-bank              # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: ./github/workflows/nasgorsifudd-bank-task-revision4.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
+  CONTAINER_NAME: nasgorsifudd-bank       # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
+  ECR_REPOSITORY: nasgorsifudd-bank          # set this to your Amazon ECR repository name
+  ECS_SERVICE: nasgorsifudd-bank-service               # set this to your Amazon ECS service name
 
 jobs:
   deploy:
@@ -48,15 +48,42 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
+          BEC_NAME: nasgorsifudd-bank
         run: |
+          echo "${{ secrets.AWS_PEM }}" | base64 -d > ap-southeast-1-bundle.pem
           # Build a docker container and
           # push it to ECR so that it can
           # be deployed to ECS.
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+          docker build \
+            --build-arg PEM_FILE=ap-southeast-1-bundle.pem \
+            --build-arg "DB_HOST=${{ secrets.DB_HOST }}" \
+            --build-arg "DB_NAME=${{ secrets.DB_NAME }}" \
+            --build-arg "DB_USERNAME=${{ secrets.DB_USERNAME }}" \
+            --build-arg "DB_PARAMS=${{ secrets.DB_PARAMS }}" \
+            --build-arg "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" \
+            --build-arg "DB_PORT=${{ secrets.DB_PORT }}" \
+            --build-arg "DB_USERNAME=${{ secrets.DB_USERNAME }}" \
+            --build-arg "JWT_SECRET=${{ secrets.JWT_SECRET }}" \
+            --build-arg "S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}" \
+            --build-arg "S3_ID=${{ secrets.S3_ID }}" \
+            --build-arg "S3_REGION=${{ secrets.S3_REGION }}" \
+            --build-arg "S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }}" \
+            --build-arg "BCRYPT_SALT=${{ secrets.BCRYPT_SALT }}" \
+            -t $ECR/$BEC_NAME:$IMAGE_TAG --file ./dockerfile/backend/Dockerfile .
+          docker push $ECR/$BEC_NAME:$IMAGE_TAG
+          echo "image=$ECR/$BEC_NAME:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
+      - name: Build DB Connection String
+        run: |
+          echo "CONN_STRING=postgres://${{ secrets.DB_USERNAME }}:${{ secrets.DB_PASSWORD}}@${{ secrets.DB_HOST }}:${{ secrets.DB_PORT }}/${{ secrets.DB_NAME }}?${{ secrets.DB_PARAMS }}" >> $GITHUB_ENV
+          echo $CONN_STRING
+      
+      - name: Migrate DB
+        run: |
+          go install -tags 'postgres' github.com/golang-migrate/migrate/v4/cmd/migrate@latest
+          migrate -database $(echo $CONN_STRING) -path common/db/migrations up
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
